<resources>
    <string name="app_name">LoyaltyApp</string>
    <string name="home">Home</string>
    <string name="profle">Profile</string>
    <string name="scan">Scan</string>
    <string name="vouchers">Vouchers</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="status">Status</string>
    <string name="points">Points</string>
    <string name="tier">Tier</string>
    <string name="full_name">Full Name: %s %s</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="list_of_branches">List of Branches</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="inbox">Inbox</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">FAQs</string>
</resources>