<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bottom_nav"
    app:startDestination="@id/home_fragment_nav">

    <fragment
        android:id="@+id/home_fragment_nav"
        android:name="com.kcals.loyaltyapp.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/account_fragment_nav"
        android:name="com.kcals.loyaltyapp.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/scan_fragment_nav"
        android:name="com.kcals.loyaltyapp.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/voucher_fragment_nav"
        android:name="com.kcals.loyaltyapp.VoucherFragment"
        android:label="@string/vouchers"
        tools:layout="@layout/fragment_voucher" />
    <fragment
        android:id="@+id/more_fragment_nav"
        android:name="com.kcals.loyaltyapp.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />


</navigation>