<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/branches_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_branches"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/terms_and_con_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/inbox_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inbox"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/about_us_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/contact_us_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/faq_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faqs"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

</LinearLayout>