<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/name_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/phone_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/is_verified_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/points_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/tier_tv"
        style="@style/subMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tier"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</LinearLayout>