<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/account_pic_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="@+id/account_details_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account_details_ll"
        app:shapeAppearance="@drawable/ic_round_bg" />

    <LinearLayout
        android:id="@+id/account_details_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_pic_iv"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_details_ll">

        <TextView
            android:id="@+id/profile_tv"
            style="@style/subMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profle"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/subMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profle"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/subMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profle"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/subMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            style="@style/subMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profle"
            app:drawableEndCompat="@drawable/ic_arrow_right" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>